--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -23,7 +23,7 @@
   type: youtube
   pages:
     - id: overview
-  youtube-id: JRg0BYcitU0
+  youtube-id: dxOOartTmMs
 
 - id: competition-terms
   pages:
