--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ test-drive:
   title: Test drive the All New Lexus&nbsp;UX Self-Charging Hybrid
   description: Head for your own urban adventure with 24hr test-drives in the All New Lexus&nbsp;UX. Book now
   cta: Book a Test Drive
-  url: https://www.lexus.co.uk/forms/secret-escapes/test-drive-se
+  url: https://forms.lexus.co.uk/webforms/SecretEscapesTestDrive.aspx
 
 offer-page:
   country: UK
